final-website-ready

--- a/index.html
+++ b/index.html
@@ -4,11 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <title>personal website</title>
 
 </head>
 <body>
-    <h1>hello world</h1>
+    <section class="main-header">
+        <div class="half-width">
+            <h2>hello I'm</h2>
+            <h1>Jack Smith</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam asperiores possimus, placeat nemo magni beatae eius voluptatem natus.</p>
+            <a href="#" target="_blank">Hire ME</a>
+        </div>
+        <div class="half-width">
+            <img src="img/peter.png" alt="">
+        </div>
+    </section>
+
+     <section class="second-header">
+        <div class="half-width bio-img">
+            <img src="img/peter_dream.png" alt="">
+        </div>
+        <div class="half-width bio">
+            <h2>Biography</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam asperiores possimus, placeat nemo Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, fugit? Eveniet delectus laudantium velit non blanditiis quaerat ut natus fugit! magni beatae eius voluptatem natus.</p>
+            <a href="#" target="_blank">Download CV</a>
+        </div>
+    </section>
+
+    <section class="work-sample">
+        <h1>My Latest Work</h1>
+        <div class="phot-glary">
+            <img src="img/latest-work/work-1.png" alt="">
+        </div>
+        <div class="phot-glary">
+            <img src="img/latest-work/work-2.jpg" alt="">
+        </div>
+        <div class="phot-glary">
+            <img src="img/latest-work/work-3.jpg" alt="">
+        </div>
+    </section>
+    
+    <section class="client-area">
+        <h1>What Client are say</h1>
+        <div class="testomonial">
+            <h3>Bruce Moccy</h3>
+            <h5>founder & CEO Alies </h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum est modi, quas exercitationem veniam quos?</p>
+        </div>
+        <div class="email">
+            <p>Leave me message in the</p>
+            <h2>Programming.hero1@gamil.com</h2>
+        </div>
+    </section>  
 </body>
 </html>
